# NexusVision

./: build.gradle.kts  build_output.txt  cxx_log.txt  cxx_log_2.txt  cxx_log_3.txt  cxx_log_4.txt  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/docs/: AFMN_CONVERSION_GUIDE.md  ROADMAP_v2.0.md  ROADMAP_v2.1.md  SPEC_v4.1.md  sizi.md
app/objectbox-models/: default.json  default.json.bak
app/src/androidTest/java/com/nexus/vision/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/k2fsa/sherpa/onnx/: OfflineRecognizer.kt  OfflineStream.kt  Vad.kt
app/src/main/java/com/nexus/vision/: MainActivity.kt  NexusApplication.kt
app/src/main/java/com/nexus/vision/audio/: AudioCaptureManager.kt  PitchDetector.kt  SystemAudioCaptureService.kt  TunerScreen.kt  TunerViewModel.kt
app/src/main/java/com/nexus/vision/benchmark/: PerformanceTracker.kt
app/src/main/java/com/nexus/vision/cache/: CacheEntities.kt  L1PHashCache.kt  L2InferenceCache.kt
app/src/main/java/com/nexus/vision/deor/: AdaptiveResizer.kt  EntropyCalculator.kt  FECSScorer.kt  PHashCalculator.kt
app/src/main/java/com/nexus/vision/engine/: EngineSocket.kt.bak  EngineState.kt  NexusEngineManager.kt  ThermalMonitor.kt
app/src/main/java/com/nexus/vision/image/: DirectCrop100MP.kt  DocumentSharpener.kt  EASSPipeline.kt  ImageCorrector.kt  RegionDecoder.kt  RouteAProcessor.kt  RouteBProcessor.kt  TileManager.kt
app/src/main/java/com/nexus/vision/memory/: LongTermMemory.kt
app/src/main/java/com/nexus/vision/ncnn/: NcnnSuperResolution.kt  RealEsrganBridge.kt  SafmnBridge.kt  SafmnSuperResolution.kt
app/src/main/java/com/nexus/vision/notification/: BatchNotificationHelper.kt  InlineReplyHandler.kt
app/src/main/java/com/nexus/vision/ocr/: MlKitOcrEngine.kt  TableReconstructor.kt
app/src/main/java/com/nexus/vision/os/: AppActionsHandler.kt  HudOverlay.kt  ProcessTextActivity.kt  QuickSettingsTile.kt  ShareReceiver.kt
app/src/main/java/com/nexus/vision/parser/: ExcelCsvParser.kt  PdfExtractor.kt  SourceCodeParser.kt
app/src/main/java/com/nexus/vision/pipeline/: NcnnSuperResolution.kt  RouteCProcessor.kt
app/src/main/java/com/nexus/vision/sdk/: IntentApiReceiver.kt  NexusContentProvider.kt
app/src/main/java/com/nexus/vision/sheets/: IndexedFile.kt  IndexedRow.kt  NexusSheetsIndex.kt  SheetsQueryEngine.kt
app/src/main/java/com/nexus/vision/translate/: LiveTranslateService.kt  TranslateScreen.kt
app/src/main/java/com/nexus/vision/ui/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/nexus/vision/ui/components/: BenchmarkDashboard.kt  ChatBubble.kt  ChatInput.kt  CropSelector.kt
app/src/main/java/com/nexus/vision/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/nexus/vision/widget/: ProgressWidget.kt
app/src/main/java/com/nexus/vision/worker/: BatchEnhanceQueue.kt  BatchEnhanceWorker.kt  BatchProcessingWorker.kt
app/src/main/jni/: CMakeLists.txt  image_fusion.cpp  image_fusion.h  neon_dwt.cpp  neon_dwt.h  neon_entropy.cpp  neon_entropy.h  neon_isauvola.cpp  neon_isauvola.h  realesrgan_jni.cpp  realesrgan_simple.cpp  realesrgan_simple.h  safmn_jni.cpp  streaming_jpeg.cpp  streaming_jpeg.h
app/src/main/jni/libjpeg-turbo/: jconfig.h  jconfigint.h  jversion.h
app/src/main/res/layout/: widget_progress_loading.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: progress_widget_info.xml  shortcuts.xml
app/src/test/java/com/nexus/vision/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
